# CerberusControlsEmbedded

./: .gitattributes  .gitignore  README.md
src/DESCRIPTION/cerberus_v1/: CMakeLists.txt  package.xml
src/DESCRIPTION/cerberus_v1/description/: cerberus.urdf.xacro
src/DESCRIPTION/cerberus_v1/description/roscon/: template_roscon.xacro
src/DESCRIPTION/cerberus_v1/description/urdf/: CERBERUS_V1.urdf
src/INTERFACE/idevice/: CMakeLists.txt  package.xml
src/INTERFACE/idevice/include/idevice/: idevice.hpp
src/INTERFACE/iio/: CMakeLists.txt  package.xml
src/INTERFACE/iio/include/iio/: iio.hpp
src/LAUNCHER/cerberus/: CMakeLists.txt  package.xml
src/LAUNCHER/cerberus/config/: relay.yaml  rviz.yaml
src/LAUNCHER/cerberus/launch/: bringup.launch.py
src/LAUNCHER/cerberus/setup/: cmanager.yaml  hwconfig.yaml
src/LAUNCHER/relaymd/: CMakeLists.txt  package.xml
src/LAUNCHER/relaymd/module/relaymd/: relay.py
src/MSG/group_action/: CMakeLists.txt  package.xml
src/MSG/group_action/msg/: GroupAction.msg
src/MSG/log/: CMakeLists.txt  package.xml
src/MSG/log/include/log/: log.hpp
src/MSG/msggroup/: CMakeLists.txt  package.xml
src/MSG/msggroup/msg/: GroupState.msg
src/MSG/msgroup/: CMakeLists.txt  package.xml
src/MSG/msgwaypoint/: CMakeLists.txt  package.xml
src/MSG/mswaypoint/: CMakeLists.txt  package.xml
src/MSG/mswaypoint/msg/: Waypoint.msg
src/PLUGIN/csystem/: CMakeLists.txt  csystem_plugin.xml  package.xml
src/PLUGIN/csystem/include/csystem/: csystem.hpp  visibility_control.h
src/PLUGIN/csystem/src/: csystem.cpp
src/PLUGIN/hidraw/: CMakeLists.txt  hidraw_plugin.xml  package.xml
src/PLUGIN/hidraw/include/hidraw/: hidraw.hpp  visibility_control.h
src/PLUGIN/hidraw/src/: hidraw.cpp
src/PLUGIN/hwsystem/: CMakeLists.txt  hwsystem_plugin.xml  package.xml
src/PLUGIN/hwsystem/include/hwsystem/: hwsystem.hpp  visibility_control.h
src/PLUGIN/hwsystem/src/: hwsystem.cpp
src/PLUGIN/hwsystem_ag/: CMakeLists.txt  hwsystem_ag_plugin.xml  package.xml
src/PLUGIN/hwsystem_ag/include/hwsystem_ag/: hwsystem_ag.hpp  visibility_control.h
src/PLUGIN/hwsystem_ag/src/: hwsystem_ag.cpp
src/PLUGIN/lsc_servo/: CMakeLists.txt  lsc_servo_plugin.xml  package.xml
src/PLUGIN/lsc_servo/include/lsc_servo/: lsc_servo.hpp  visibility_control.h
src/PLUGIN/lsc_servo/src/: lsc_servo.cpp
src/SYS/gmotion/: CMakeLists.txt  package.xml
src/SYS/gmotion/config/: gmotion.yaml
src/SYS/gmotion/include/gmotion/: gmotion.hpp
src/SYS/gmotion/src/: gmotion.cpp  main.cpp
src/SYS/iksolver/: CMakeLists.txt  package.xml
src/SYS/iksolver/config/: ikconfig.yaml
src/SYS/iksolver/include/iksolver/: iksolver.hpp
src/SYS/iksolver/src/: iksolver.cpp  main.cpp
src/SYS/iksolver_bridge/: CMakeLists.txt  package.xml
src/SYS/iksolver_bridge/config/: iksolver_bridge_config.yaml
src/SYS/iksolver_bridge/src/: iksolver_bridge.cpp
src/TEST/test_iksolver/: CMakeLists.txt  package.xml
src/TEST/test_iksolver/src/: target.cpp
src/TEST/test_servo/: CMakeLists.txt  package.xml
src/TEST/test_servo/src/: servocmd.cpp
