<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iksolver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mr.kim.davy@gmail.com">KDZ7</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>log</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>msggroup</depend>
  <depend>msgwaypoint</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>kdl_parser</depend>
  <depend>trac_ik_lib</depend>
  <depend>urdf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>